# leela-studio

./: .env.example  .gitignore  AI_TEAM.md  Himalayan Sunrise Demo.ass  Himalayan Sunrise Demo.manifest.json  Himalayan Sunrise Demo.srt  LEELA_CONTEXT.md  LICENSE  Makefile  PROJECT_CHARTER.md  PROJECT_STRUCTURE.md  README.md  REPOSITORY_AUDIT.md  director_notes.md  main.py  metrics.json  production_notes.md  pyproject.toml
.agents/: AGENTS.md
00_MASTER/: KRISHNA_BRAND_IDENTITY.md  KRISHNA_CHANNEL_STRATEGY.md  MASTER_INDEX.md  PRODUCTION_SYSTEM.md  SCRIPT_WRITING_BIBLE.md  VISUAL_QC_MANUAL.md  VISUAL_STYLE_BIBLE.md
01_EPISODES/V001/: ARCHITECTURE_V001_KRISHNA_BIRTH.md  EDL_V001.md  FOCUS_GROUP_V001.md  IMAGE_PROMPT_PLAN.md  MASTER_PRODUCTION_CHECKLIST.md  PRE_PRODUCTION_VALIDATION_V001.md  RESEARCH_V001_KRISHNA_BIRTH.md  SCRIPT_V001_PART1.md  SCRIPT_V001_PART2.md  SCRIPT_V001_PART3.md  SCRIPT_V001_PART4.md  SEO_PLAN.md  STORYBOARD_V001.md  THUMBNAIL_PLAN.md  (+1 more)
04_TOOLS/: compile_video.py  generate_elevenlabs_voice.py  generate_gemini_voice.py  generate_sarvam_voice.py  generate_voice.py  test_voice.py
09_ARCHIVE/: IMAGE_PROMPT_PLAN_V002_FINAL_OLD.md  LEELA_STUDIO_V2_PRODUCTION.md  SCRIPT_V002_v1_OLD.md  STORYBOARD_V002_v1_OLD.md
budget/: manager.py
config/: settings.py  settings.yaml
director/: cinematography.py  continuity.py  director.py
docs/: architecture_v2.md  director.md  execution_plan.md  generation_engine.md  orchestrator.md  orchestrator_lifecycle.md  provider_selection.md  render_graph.md  render_profiles.md  renderer.md  sdk.md  story_engine.md  storyboard.md  vision.md
episodes/: schemas.py
examples/: build_execution_plan.py  build_storyboard.py  check_status.py  compile_episode.py  download_asset.py  generate_episode.py  generate_image.py  generate_image_to_video.py  generate_shotlist.py  generate_text_to_video.py  generation_report.py  resume_episode.py  status.py  validate_episode.py
orchestrator/: cache.py  engine.py  executor.py  monitor.py  queue.py  reporter.py  worker.py
pixverse/: auth.py  client.py  downloads.py  jobs.py  models.py  schemas.py
profiles/: instagram.yaml  shorts.yaml
prompt_templates/: text_to_image.jinja  text_to_video.jinja
providers/: base.py  pixverse.py
renderer/: audio.py  engine.py  ffmpeg.py  subtitles.py
reports/: continuity_report.md  render_report.json
story/: compiler.py  continuity.py  parser.py  prompts.py  validator.py
tests/: test_director.py  test_generator.py  test_init.py  test_orchestrator.py  test_pixverse.py  test_renderer.py  test_story_engine.py
(+142 files in other folders)
