[project]
name = "leela-studio"
version = "0.1.0"
description = "LEELA Studio - Production-grade cinematic storytelling pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "00_MASTER",
    "01_EPISODES",
    "02_ASSETS",
    "04_TOOLS",
    "09_ARCHIVE",
    "LEELA",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    00_MASTER
  | 01_EPISODES
  | 02_ASSETS
  | 04_TOOLS
  | 09_ARCHIVE
  | LEELA
  | \.venv
  | __pycache__
)/
'''

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
